DERBY-1746 - removing svn:externals property from <trunk>/tools/testing, adjusting upgrade tests to by default attempt to access https://svn.apache.org/repos/asf/db/derby/jars for the older version's derby.jar files; removing dependency on 'lib' in old version's directory structure. Also adjusted comments.
git-svn-id: https://svn.apache.org/repos/asf/db/derby/code/trunk@538724 13f79535-47bb-0310-9956-ffa450edef68